--- a/css/style.css
+++ b/css/style.css
@@ -1065,3 +1065,7 @@ a:focus{
 }.ui-tabs .ui-tabs-nav li.ui-tabs-active a:focus{
   outline: none
 }
+/**/
+.jScrollbar5{
+  width: 600px!important
+}
