--- a/css/jScrollbar.jquery.css
+++ b/css/jScrollbar.jquery.css
@@ -171,38 +171,48 @@
 /***************/
 .jScrollbar5 {
 	width:500px;
-	height:209px;
+	border-bottom: 1px solid #463b52;
+	height:250px;
 	overflow:hidden;
 	position:relative;
-	background-color:#313131;
+	  background: #1f1a24;
 	padding:10px
 }
 	.jScrollbar5 .jScrollbar_mask {
-		width:460px;
-		position:relative;
-		top:0;
+	  width: 600px;
+	  position: relative;
+	  top: 0;
+	  padding-left: 40px;
 	}
 		.jScrollbar5 .jScrollbar_mask p {
 			margin:0;
 			padding:0;
-			color:#FFF;
-			font-size:12px;
+			color:#c0b8c8;
+			font-size:21px;
 		}
 	.jScrollbar5 .jScrollbar_draggable {
 		float:left;
 		width:12px;
-		height:209px;
-		overflow:hidden;
+		  border-radius: 10px;
+		height:250px;
 		background:none;
-		background-color:#222222;
-		border:1px solid #000;
+		background-color:#2d2734;
+		border:1px solid #2d2734;
 		position:relative
 	}
 	.jScrollbar5 .jScrollbar_draggable a.draggable {
-		position:relative;
-		background:transparent url('../images/bg_draggable5.png') no-repeat;
-		display:block;
-		height:52px;
-		width:12px;
-		cursor:s-resize
+		  position: relative;
+			  display: block;
+			  height: 25px;
+			  width: 25px;
+			  left: -7px;
+			  cursor: s-resize;
+			  border-radius: 100%;
+			  background: #fff;
+	}
+	.jScrollbar5:after{
+		content: ' ';
+		width: 670px;
+		height: 40px;
+		border-bottom: 1px solid #463b52;
 	}
