--- a/css/style.css
+++ b/css/style.css
@@ -1611,6 +1611,15 @@ background-image: url('images/sprite.png');
   color: #fff;
   text-align: center;
   }
+   .friend-li  a.btn-chat{
+
+  padding: 10px 0px;
+  background: #db3e67;
+  font-size: 27px;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  }
 .footer-smardy-list .active-footer{
   background: #fff;
 }
@@ -1727,3 +1736,146 @@ text-transform: uppercase;
   border-radius: 0 40px 40px 0px;
   padding: 7px 18px;
   }
+  .mess-info{
+    display: inline-block;
+    width: 450px;
+          font-size: 26px;
+  color: #2d2734;
+  }
+  .mess-info .status-mes{
+color: #db3e67
+  }
+  .mess-info span{
+display: inline-block;
+width: 100%
+
+}
+  .btn-subject.messages-btn{
+    background-color: #fff;
+    width: 670px;
+    box-shadow: 0 5px 0px #5c4d6e
+  }
+  .icon-avatar{
+  width: 89px;
+  height: 89px;
+  float: left;
+  margin-top: -8px;
+  margin-left: 15px;
+  display: inline-block;
+  margin-right: 15px;
+  }
+  .mes-ico{
+   background-image: url('images/sprite.png');
+  width: 78px;
+  height: 59px;
+  background-position: -317px -87px;
+  display: inline-block;
+  }
+  .mes-ico.count-mes{
+   background: #db3e67;
+  border-radius: 100%;
+  height: 35px;
+  width: 35px;
+  text-align: center;
+  font-size: 22px;
+  margin-top: -10px;
+  position: relative;
+  top: -20px;
+  left: 30px;
+  }
+#messages-top{
+  margin-top: 30px
+}
+.icon-re-chat{
+   background-image: url('images/sprite.png');
+  width: 78px;
+  display: block;
+  margin: 0 auto;
+    box-shadow: 1px -5px 7px #807979;
+  height: 59px;
+  border-radius: 10px 10px 0px 0px;
+  background-position: -570px -89px;
+  background-color: #db3e67;
+
+}
+#icon-chat-btn{
+  border-bottom: 3px solid #db3e67;
+  margin-top: -75px;
+  position: relative;
+  z-index: 9
+}
+.message-details{
+  width: 680px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.message-details img{
+ display: inline-block;
+ margin-right: 20px;
+  float: right;
+
+
+}
+.chat-mess{
+  width: 560px;
+  display: inline-block;
+  padding: 15px;
+  background: #fff;
+  position: relative;
+  font-size: 26px;
+  color: #2d2734;
+  border-radius: 10px;
+}
+.friend-message img{
+  float: left;
+}
+.me-message.message-details img{
+    margin-right: 0px;
+    margin-left: 20px
+}
+.me-message .chat-mess{
+background-color: #7d6c90;
+color: #fff}
+.time-msg {
+  color: #a691ba;
+  margin: 20px 0px;
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+  font-size: 24px;
+}
+.time-msg time {
+  position: relative;
+  z-index: 1;
+  background: #2d2735;
+  padding: 0 5px;
+}
+.line {
+   content: ' ';
+  border-bottom: 1px dashed #a591bd;
+  display: inline-block;
+  top: -50px;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+}
+.message-details.me-message .chat-mess:before{
+   background-position: -435px -989px;
+  right: -17px;
+  left: auto;
+  width: 45px;
+  height: 50px;
+  top: 10px;
+  z-index: 999;
+
+}
+.chat-mess:before{
+ content: ' ';
+  background-image: url('images/sprite.png');
+  width: 27px;
+  height: 35px;
+  left: -27px;
+  background-position: -238px -836px;
+  top: 20px;
+  position: absolute;
+}
